--- a/index.html
+++ b/index.html
@@ -1269,13 +1269,206 @@
                         <img src="https://raw.githubusercontent.com/niihiihii/SIFAS_FesParty_StatusBoard/main/limitbreak/limitbreak5.png" />
                     </div>
                 </div>
+                <div class="card fes2-kanata__card">
+                    <img src="https://raw.githubusercontent.com/niihiihii/SIFAS_FesParty_StatusBoard/main/fes/053_fes2_kanata.png" />
+                    <div class="signature fes2-kanata__signature">
+                        <img src="https://raw.githubusercontent.com/niihiihii/SIFAS_FesParty_StatusBoard/main/signatures/kanata.png" />
+                    </div>
+                    <div class="limitbreak fes2-kanata__limitbreak0">
+                        <img src="https://raw.githubusercontent.com/niihiihii/SIFAS_FesParty_StatusBoard/main/limitbreak/limitbreak0.png" />
+                    </div>
+                    <div class="limitbreak fes2-kanata__limitbreak1">
+                        <img src="https://raw.githubusercontent.com/niihiihii/SIFAS_FesParty_StatusBoard/main/limitbreak/limitbreak1.png" />
+                    </div>
+                    <div class="limitbreak fes2-kanata__limitbreak2">
+                        <img src="https://raw.githubusercontent.com/niihiihii/SIFAS_FesParty_StatusBoard/main/limitbreak/limitbreak2.png" />
+                    </div>
+                    <div class="limitbreak fes2-kanata__limitbreak3">
+                        <img src="https://raw.githubusercontent.com/niihiihii/SIFAS_FesParty_StatusBoard/main/limitbreak/limitbreak3.png" />
+                    </div>
+                    <div class="limitbreak fes2-kanata__limitbreak4">
+                        <img src="https://raw.githubusercontent.com/niihiihii/SIFAS_FesParty_StatusBoard/main/limitbreak/limitbreak4.png" />
+                    </div>
+                    <div class="limitbreak fes2-kanata__limitbreak5">
+                        <img src="https://raw.githubusercontent.com/niihiihii/SIFAS_FesParty_StatusBoard/main/limitbreak/limitbreak5.png" />
+                    </div>
+                </div>
+                <div class="card fes2-setsuna__card">
+                    <img src="https://raw.githubusercontent.com/niihiihii/SIFAS_FesParty_StatusBoard/main/fes/054_fes2_setsuna.png" />
+                    <div class="signature fes2-setsuna__signature">
+                        <img src="https://raw.githubusercontent.com/niihiihii/SIFAS_FesParty_StatusBoard/main/signatures/setsuna.png" />
+                    </div>
+                    <div class="limitbreak fes2-setsuna__limitbreak0">
+                        <img src="https://raw.githubusercontent.com/niihiihii/SIFAS_FesParty_StatusBoard/main/limitbreak/limitbreak0.png" />
+                    </div>
+                    <div class="limitbreak fes2-setsuna__limitbreak1">
+                        <img src="https://raw.githubusercontent.com/niihiihii/SIFAS_FesParty_StatusBoard/main/limitbreak/limitbreak1.png" />
+                    </div>
+                    <div class="limitbreak fes2-setsuna__limitbreak2">
+                        <img src="https://raw.githubusercontent.com/niihiihii/SIFAS_FesParty_StatusBoard/main/limitbreak/limitbreak2.png" />
+                    </div>
+                    <div class="limitbreak fes2-setsuna__limitbreak3">
+                        <img src="https://raw.githubusercontent.com/niihiihii/SIFAS_FesParty_StatusBoard/main/limitbreak/limitbreak3.png" />
+                    </div>
+                    <div class="limitbreak fes2-setsuna__limitbreak4">
+                        <img src="https://raw.githubusercontent.com/niihiihii/SIFAS_FesParty_StatusBoard/main/limitbreak/limitbreak4.png" />
+                    </div>
+                    <div class="limitbreak fes2-setsuna__limitbreak5">
+                        <img src="https://raw.githubusercontent.com/niihiihii/SIFAS_FesParty_StatusBoard/main/limitbreak/limitbreak5.png" />
+                    </div>
+                </div>
+                <div class="card fes2-ayumu__card">
+                    <img src="https://raw.githubusercontent.com/niihiihii/SIFAS_FesParty_StatusBoard/main/fes/055_fes2_ayumu.png" />
+                    <div class="signature fes2-ayumu__signature">
+                        <img src="https://raw.githubusercontent.com/niihiihii/SIFAS_FesParty_StatusBoard/main/signatures/ayumu.png" />
+                    </div>
+                    <div class="limitbreak fes2-ayumu__limitbreak0">
+                        <img src="https://raw.githubusercontent.com/niihiihii/SIFAS_FesParty_StatusBoard/main/limitbreak/limitbreak0.png" />
+                    </div>
+                    <div class="limitbreak fes2-ayumu__limitbreak1">
+                        <img src="https://raw.githubusercontent.com/niihiihii/SIFAS_FesParty_StatusBoard/main/limitbreak/limitbreak1.png" />
+                    </div>
+                    <div class="limitbreak fes2-ayumu__limitbreak2">
+                        <img src="https://raw.githubusercontent.com/niihiihii/SIFAS_FesParty_StatusBoard/main/limitbreak/limitbreak2.png" />
+                    </div>
+                    <div class="limitbreak fes2-ayumu__limitbreak3">
+                        <img src="https://raw.githubusercontent.com/niihiihii/SIFAS_FesParty_StatusBoard/main/limitbreak/limitbreak3.png" />
+                    </div>
+                    <div class="limitbreak fes2-ayumu__limitbreak4">
+                        <img src="https://raw.githubusercontent.com/niihiihii/SIFAS_FesParty_StatusBoard/main/limitbreak/limitbreak4.png" />
+                    </div>
+                    <div class="limitbreak fes2-ayumu__limitbreak5">
+                        <img src="https://raw.githubusercontent.com/niihiihii/SIFAS_FesParty_StatusBoard/main/limitbreak/limitbreak5.png" />
+                    </div>
+                </div>
+                <div class="card fes2-mari__card">
+                    <img src="https://raw.githubusercontent.com/niihiihii/SIFAS_FesParty_StatusBoard/main/fes/056_fes2_mari.png" />
+                    <div class="signature fes2-mari__signature">
+                        <img src="https://raw.githubusercontent.com/niihiihii/SIFAS_FesParty_StatusBoard/main/signatures/mari.png" />
+                    </div>
+                    <div class="limitbreak fes2-mari__limitbreak0">
+                        <img src="https://raw.githubusercontent.com/niihiihii/SIFAS_FesParty_StatusBoard/main/limitbreak/limitbreak0.png" />
+                    </div>
+                    <div class="limitbreak fes2-mari__limitbreak1">
+                        <img src="https://raw.githubusercontent.com/niihiihii/SIFAS_FesParty_StatusBoard/main/limitbreak/limitbreak1.png" />
+                    </div>
+                    <div class="limitbreak fes2-mari__limitbreak2">
+                        <img src="https://raw.githubusercontent.com/niihiihii/SIFAS_FesParty_StatusBoard/main/limitbreak/limitbreak2.png" />
+                    </div>
+                    <div class="limitbreak fes2-mari__limitbreak3">
+                        <img src="https://raw.githubusercontent.com/niihiihii/SIFAS_FesParty_StatusBoard/main/limitbreak/limitbreak3.png" />
+                    </div>
+                    <div class="limitbreak fes2-mari__limitbreak4">
+                        <img src="https://raw.githubusercontent.com/niihiihii/SIFAS_FesParty_StatusBoard/main/limitbreak/limitbreak4.png" />
+                    </div>
+                    <div class="limitbreak fes2-mari__limitbreak5">
+                        <img src="https://raw.githubusercontent.com/niihiihii/SIFAS_FesParty_StatusBoard/main/limitbreak/limitbreak5.png" />
+                    </div>
+                </div>
             </div>
         </div>
         <div class="section section__fes3">
             <div class="sidebar sidebar__fes3">
                 3rd<br>FES
             </div>
-            <div class="background" id="fes3"></div>
+            <div class="background" id="fes3">
+                <div class="card fes3-mia__card">
+                    <img src="https://raw.githubusercontent.com/niihiihii/SIFAS_FesParty_StatusBoard/main/fes/057_fes3_mia.png" />
+                    <div class="signature fes3-mia__signature">
+                        <img src="https://raw.githubusercontent.com/niihiihii/SIFAS_FesParty_StatusBoard/main/signatures/mia.png" />
+                    </div>
+                    <div class="limitbreak fes3-mia__limitbreak0">
+                        <img src="https://raw.githubusercontent.com/niihiihii/SIFAS_FesParty_StatusBoard/main/limitbreak/limitbreak0.png" />
+                    </div>
+                    <div class="limitbreak fes3-mia__limitbreak1">
+                        <img src="https://raw.githubusercontent.com/niihiihii/SIFAS_FesParty_StatusBoard/main/limitbreak/limitbreak1.png" />
+                    </div>
+                    <div class="limitbreak fes3-mia__limitbreak2">
+                        <img src="https://raw.githubusercontent.com/niihiihii/SIFAS_FesParty_StatusBoard/main/limitbreak/limitbreak2.png" />
+                    </div>
+                    <div class="limitbreak fes3-mia__limitbreak3">
+                        <img src="https://raw.githubusercontent.com/niihiihii/SIFAS_FesParty_StatusBoard/main/limitbreak/limitbreak3.png" />
+                    </div>
+                    <div class="limitbreak fes3-mia__limitbreak4">
+                        <img src="https://raw.githubusercontent.com/niihiihii/SIFAS_FesParty_StatusBoard/main/limitbreak/limitbreak4.png" />
+                    </div>
+                    <div class="limitbreak fes3-mia__limitbreak5">
+                        <img src="https://raw.githubusercontent.com/niihiihii/SIFAS_FesParty_StatusBoard/main/limitbreak/limitbreak5.png" />
+                    </div>
+                </div>
+                <div class="card fes3-kanan__card">
+                    <img src="https://raw.githubusercontent.com/niihiihii/SIFAS_FesParty_StatusBoard/main/fes/058_fes3_kanan.png" />
+                    <div class="signature fes3-kanan__signature">
+                        <img src="https://raw.githubusercontent.com/niihiihii/SIFAS_FesParty_StatusBoard/main/signatures/kanan.png" />
+                    </div>
+                    <div class="limitbreak fes3-kanan__limitbreak0">
+                        <img src="https://raw.githubusercontent.com/niihiihii/SIFAS_FesParty_StatusBoard/main/limitbreak/limitbreak0.png" />
+                    </div>
+                    <div class="limitbreak fes3-kanan__limitbreak1">
+                        <img src="https://raw.githubusercontent.com/niihiihii/SIFAS_FesParty_StatusBoard/main/limitbreak/limitbreak1.png" />
+                    </div>
+                    <div class="limitbreak fes3-kanan__limitbreak2">
+                        <img src="https://raw.githubusercontent.com/niihiihii/SIFAS_FesParty_StatusBoard/main/limitbreak/limitbreak2.png" />
+                    </div>
+                    <div class="limitbreak fes3-kanan__limitbreak3">
+                        <img src="https://raw.githubusercontent.com/niihiihii/SIFAS_FesParty_StatusBoard/main/limitbreak/limitbreak3.png" />
+                    </div>
+                    <div class="limitbreak fes3-kanan__limitbreak4">
+                        <img src="https://raw.githubusercontent.com/niihiihii/SIFAS_FesParty_StatusBoard/main/limitbreak/limitbreak4.png" />
+                    </div>
+                    <div class="limitbreak fes3-kanan__limitbreak5">
+                        <img src="https://raw.githubusercontent.com/niihiihii/SIFAS_FesParty_StatusBoard/main/limitbreak/limitbreak5.png" />
+                    </div>
+                </div>
+                <div class="card fes3-shizuku__card">
+                    <img src="https://raw.githubusercontent.com/niihiihii/SIFAS_FesParty_StatusBoard/main/fes/059_fes3_shizuku.png" />
+                    <div class="signature fes3-shizuku__signature">
+                        <img src="https://raw.githubusercontent.com/niihiihii/SIFAS_FesParty_StatusBoard/main/signatures/shizuku.png" />
+                    </div>
+                    <div class="limitbreak fes3-shizuku__limitbreak0">
+                        <img src="https://raw.githubusercontent.com/niihiihii/SIFAS_FesParty_StatusBoard/main/limitbreak/limitbreak0.png" />
+                    </div>
+                    <div class="limitbreak fes3-shizuku__limitbreak1">
+                        <img src="https://raw.githubusercontent.com/niihiihii/SIFAS_FesParty_StatusBoard/main/limitbreak/limitbreak1.png" />
+                    </div>
+                    <div class="limitbreak fes3-shizuku__limitbreak2">
+                        <img src="https://raw.githubusercontent.com/niihiihii/SIFAS_FesParty_StatusBoard/main/limitbreak/limitbreak2.png" />
+                    </div>
+                    <div class="limitbreak fes3-shizuku__limitbreak3">
+                        <img src="https://raw.githubusercontent.com/niihiihii/SIFAS_FesParty_StatusBoard/main/limitbreak/limitbreak3.png" />
+                    </div>
+                    <div class="limitbreak fes3-shizuku__limitbreak4">
+                        <img src="https://raw.githubusercontent.com/niihiihii/SIFAS_FesParty_StatusBoard/main/limitbreak/limitbreak4.png" />
+                    </div>
+                    <div class="limitbreak fes3-shizuku__limitbreak5">
+                        <img src="https://raw.githubusercontent.com/niihiihii/SIFAS_FesParty_StatusBoard/main/limitbreak/limitbreak5.png" />
+                    </div>
+                </div>
+                <div class="card fes3-eli__card">
+                    <img src="https://raw.githubusercontent.com/niihiihii/SIFAS_FesParty_StatusBoard/main/fes/060_fes3_eli.png" />
+                    <div class="signature fes3-eli__signature">
+                        <img src="https://raw.githubusercontent.com/niihiihii/SIFAS_FesParty_StatusBoard/main/signatures/eli.png" />
+                    </div>
+                    <div class="limitbreak fes3-eli__limitbreak0">
+                        <img src="https://raw.githubusercontent.com/niihiihii/SIFAS_FesParty_StatusBoard/main/limitbreak/limitbreak0.png" />
+                    </div>
+                    <div class="limitbreak fes3-eli__limitbreak1">
+                        <img src="https://raw.githubusercontent.com/niihiihii/SIFAS_FesParty_StatusBoard/main/limitbreak/limitbreak1.png" />
+                    </div>
+                    <div class="limitbreak fes3-eli__limitbreak2">
+                        <img src="https://raw.githubusercontent.com/niihiihii/SIFAS_FesParty_StatusBoard/main/limitbreak/limitbreak2.png" />
+                    </div>
+                    <div class="limitbreak fes3-eli__limitbreak3">
+                        <img src="https://raw.githubusercontent.com/niihiihii/SIFAS_FesParty_StatusBoard/main/limitbreak/limitbreak3.png" />
+                    </div>
+                    <div class="limitbreak fes3-eli__limitbreak4">
+                        <img src="https://raw.githubusercontent.com/niihiihii/SIFAS_FesParty_StatusBoard/main/limitbreak/limitbreak4.png" />
+                    </div>
+                    <div class="limitbreak fes3-eli__limitbreak5">
+                        <img src="https://raw.githubusercontent.com/niihiihii/SIFAS_FesParty_StatusBoard/main/limitbreak/limitbreak5.png" />
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="section section__fes4">
             <div class="sidebar sidebar__fes4">
